@@ -4,19 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zarbosoft</groupId>
-    <artifactId>shoedemo</artifactId>
+    <groupId>com.zarbosoft.pyxyzygy</groupId>
+    <artifactId>app</artifactId>
     <version>1.0.0</version>
 
     <dependencies>
         <dependency>
-            <groupId>com.zarbosoft</groupId>
-            <artifactId>appdirsj</artifactId>
-            <version>0.0.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.zarbosoft.internal</groupId>
-            <artifactId>shoedemo-seed</artifactId>
+            <groupId>com.zarbosoft.pyxyzygy</groupId>
+            <artifactId>core</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
@@ -24,6 +19,38 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zarbosoft.pyxyzygy</groupId>
+            <artifactId>nearestneighborimageviewagent</artifactId>
+            <version>1.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zarbosoft</groupId>
+            <artifactId>pidgoon-command</artifactId>
+            <version>0.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zarbosoft.pyxyzygy</groupId>
+            <artifactId>nearestneighborimageview</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>gifencoder</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jcodec</groupId>
+            <artifactId>jcodec</artifactId>
+            <version>0.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>11.0.2</version>
         </dependency>
     </dependencies>
     <properties>
@@ -37,18 +64,6 @@
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>1.7</version>
                 <executions>
-                    <execution>
-                        <id>add-target-sources-dir</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${project.build.directory}/src</source>
-                            </sources>
-                        </configuration>
-                    </execution>
                     <execution>
                         <id>add-target-resources-dir</id>
                         <phase>generate-resources</phase>
@@ -67,39 +82,15 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>generate-model</id>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <tasks>
-                                <taskdef name="generateTask"
-                                         classname="com.zarbosoft.internal.shoedemo_generate.GenerateTask"
-                                         classpath="${maven.dependency.classpath}"/>
-                                <generateTask path="${project.build.directory}/src"/>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.zarbosoft.internal</groupId>
-                        <artifactId>shoedemo-generate</artifactId>
-                        <version>1.0.0</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
                     <source>1.9</source>
                     <target>1.9</target>
+                    <compilerArgs>
+                        <arg>--add-exports=javafx.graphics/com.sun.prism=com.zarbosoft.pyxyzygy.app</arg>
+                        <arg>--add-exports=javafx.graphics/com.sun.javafx.sg.prism=com.zarbosoft.pyxyzygy.app</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -252,6 +243,50 @@
                                 </module>
                                 <module>
                                     <artifact>
+                                        <groupId>com.squareup</groupId>
+                                        <artifactId>gifencoder</artifactId>
+                                        <version>0.9.1</version>
+                                    </artifact>
+                                    <moduleInfo>
+                                        <name>gifencoder</name>
+                                        <requires>*;</requires>
+                                    </moduleInfo>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>org.jcodec</groupId>
+                                        <artifactId>jcodec</artifactId>
+                                        <version>0.2.3</version>
+                                    </artifact>
+                                    <moduleInfo>
+                                        <name>jcodec</name>
+                                        <requires>*;</requires>
+                                    </moduleInfo>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>org.apache.ant</groupId>
+                                        <artifactId>ant</artifactId>
+                                        <version>1.10.1</version>
+                                    </artifact>
+                                    <moduleInfo>
+                                        <name>ant</name>
+                                        <requires>*;</requires>
+                                    </moduleInfo>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>org.apache.ant</groupId>
+                                        <artifactId>ant-launcher</artifactId>
+                                        <version>1.10.1</version>
+                                    </artifact>
+                                    <moduleInfo>
+                                        <name>ant.launcher</name>
+                                        <requires>*;</requires>
+                                    </moduleInfo>
+                                </module>
+                                <module>
+                                    <artifact>
                                         <groupId>com.google.j2objc</groupId>
                                         <artifactId>j2objc-annotations</artifactId>
                                         <version>1.1</version>
@@ -312,7 +347,7 @@
                                 <path>${modulesOutput}</path>
                             </modulePath>
                             <modules>
-                                <module>com.zarbosoft.shoedemo</module>
+                                <module>com.zarbosoft.pyxyzygy.app</module>
                             </modules>
                             <baseJdk>version=11,vendor=openjdk</baseJdk>
                             <outputDirectory>${imageOutput}</outputDirectory>
